media alignment bug fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -233,7 +233,7 @@ body {
   gap: 10px; /* space between grid items */
   width: 80vw; /* limits the width to 80% of the viewport width */
   margin: 20px auto; /* centers the grid and adds vertical spacing */
-  /* justify-content: center; */
+  justify-content: center;
   position: relative;
   left: 50%;
   transform: translateX(-50%); /* Forces centering */
